# yaac

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  general-code-practices.mdc  main.py  pyproject.toml
.cursor/rules/: general-code-practices.mdc  test-practices.mdc  yaac-env-setup.mdc
publish/: .env.example  .pypirc.example  PUBLISHING.md  upload_to_pypi.sh  upload_to_testpypi.sh
setup/: build_env.sh
tests/: test_dependency_compatibility.py
tests/models/sic/: test_load_from_checkpoint.py  test_sic.py
tests/models/yad/: test_yad.py
yaac/: __init__.py
yaac/common/: __init__.py  model_loader.py  trainable_model.py
yaac/models/: __init__.py
yaac/models/sic/: __init__.py  classification_heads.py  sic.py
yaac/models/yad/: yad.py
