[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaac"
version = "0.1.0"
description = "Yet Another AI Company - Python package for loading and using trained image classification models"
authors = [{name = "Phil Ammirato", email = "phil.ammirato.yaac@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
keywords = ["machine-learning", "deep-learning", "pytorch", "image-classification", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy==2.3.3",
    "safetensors>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88
