[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaac"
version = "0.1.2"
description = "YAAC - Python package for loading and using trained AI models"
authors = [{name = "Phil Ammirato", email = "phil.ammirato.yaac@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["machine-learning", "deep-learning", "pytorch", "image-classification", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "safetensors>=0.5.0",
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<0.24.0",
    "transformers>=4.40.0",
]

[project.urls]
Homepage = "https://github.com/withyaac/yaac"
Repository = "https://github.com/withyaac/yaac"
Documentation = "https://github.com/withyaac/yaac#readme"
"Bug Tracker" = "https://github.com/withyaac/yaac/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88
